--- a/artigo-de-opinião/diferenca-dos-porques.html
+++ b/artigo-de-opinião/diferenca-dos-porques.html
@@ -43,7 +43,7 @@
         <h1>Diferença dos "porquês"</h1>
     <small>
     <section class="autor-data">  Por <a href="leo.html">Leonardo da Cunha</a> —
-    <small>21/06/2025 08h01 • Última atualização </small> <br>
+    <small>21/06/2025 08h01 • Última atualização 28/06/2025 16h53 </small> <br>
     </section>
 
     <section class="compartilhar">
@@ -55,17 +55,102 @@
     </p>
     </section>
 
-    <p>A diferença dos por <i>"porquês"</i> é uma dúvida frequente dos brasileiros. Mas é crucial para a clareza da escrita. <br>
+          <p>
 
-    Na Língua Portuguesa, há quatro formas diferentes de escrever "porquê" — <strong>por que, porque, por quê e porquê</strong> — e cada uma é usada em contextos específicos, sendo:
+        A diferença dos <i>"porquês"</i> é uma dúvida frequente entre os brasileiros, mas é crucial para a clareza da escrita. <br>
+        Na Língua Portuguesa, há quatro formas diferentes de escrever "porquê" — <strong>por que, porque, por quê</strong> <br> e <strong>porquê</strong> — e cada uma é usada em contextos específicos.</p>
+
+        <h1>Uso dos <i>porquês</i></h1>
 
         <ul>
-            <li><strong>Porque</strong></li>
+            <li><strong>Por que</strong>: usado no início de perguntas diretas ou indiretas.</li>
+            <li><strong>Porque</strong>: usado para respostas.</li>
+            <li><strong>Por quê</strong>: usado no final de frases interrogativas.</li>
+            <li><strong>Porquê</strong>: usado como substantivo, significando "motivo", "causa" ou "razão". Geralmente vem acompanhado <br> de determinantes, como artigos ou pronomes.</li>
         </ul>
 
+        <h1>Dicas & exemplos</h1>
 
-    </p>
+        <p>
 
+        Uma dica muito valiosa é substituir o <i>"porquê"</i> escolhido por outra palavra, como "motivo" ou "razão", para <br> verificar qual das quatro formas se encaixa melhor. <br>
+        Você está em dúvida se precisa usar o "porque" com ou sem acento, junto ou separado? Tente substituí-lo e veja <br> qual faz mais sentido. Olhe só:
+
+        </p>
+
+        <p>
+
+        <strong>Exemplo 1:</strong> "Por que você está triste?" <br>
+        Se conseguimos substituir “por que” por “por qual razão” e a frase continua fazendo sentido, é sinal de que a forma <br> usada está correta. Então a frase poderia ser: "Por que você está triste?" ou "Por qual razão você está triste?" — ambas <br> estão gramaticalmente corretas.
+
+        </p>
+
+        <p>
+
+        <strong>Exemplo 2:</strong> "Ela é saudável porque se alimenta bem." <br>
+        Podemos substituir o "porque" por "pois", "visto que" ou "uma vez que". Assim: "Ela é saudável pois se alimenta bem." 
+
+        </p>
+
+        <p>
+
+        <strong>Exemplo 3:</strong> "Não sei, por quê?" <br>
+        Aqui, o <strong>"por quê"</strong> aparece no final da frase — e, por isso, leva acento. <br>
+        Tente substituir por "por qual razão?" — "Não sei, por qual razão?" — e a estrutura continua correta.  
+        Essa forma sempre <br> leva acento quando está no fim da frase, mesmo que a pergunta esteja incompleta ou seja informal.
+
+        </p>
+
+        <p>
+
+        <strong>Exemplo 4:</strong> "Deve ter um porquê para ela ter faltado hoje." <br>
+        O "porquê" nesse caso pode ser substituído por "razão" ou "motivo". Assim: <br>
+        "Deve existir um motivo para ela ter faltado hoje." ou "Deve existir uma razão para ela ter faltado hoje."
+
+        </p>
+
+        <h1>Resumo aprofundado</h1>
+
+        <table>
+            <tr>
+                <th>Quatro Porquês</th>
+                <th>Quando usá-lo</th>
+                <th>Exemplos</th>
+            </tr>
+
+            <tr>
+                <td>Por que</td>
+                <td>Usado no início de perguntas diretas ou indiretas. Pode ser substituído por: "por qual razão/motivo", "pelo qual", etc.</td>
+                <td>Por que você está triste? <br><br> Por qual razão você está triste?</td>
+            </tr>
+
+            <tr>
+                <td>Porque</td>
+                <td>Usado em respostas. Tem o mesmo significado de "pois", "já que" ou "uma vez que".</td>
+                <td>Estou chateado com você, porque você me xingou. <br><br> Estou chateado com você, pois/já que/uma vez que você me xingou.</td>
+            </tr>
+
+            <tr>
+                <td>Por quê</td>
+                <td>Usado no final de perguntas, antes de pontuação. Pode ser substituído por "por qual razão" ou "por qual motivo".</td>
+                <td>Você não almoçou? Por quê? <br><br> Você não almoçou? Por qual razão?</td>
+            </tr>
+
+            <tr>
+                <td>Porquê</td>
+                <td>Usado como substantivo (com acento), geralmente com determinantes como "o", "um", "meu". Significa "motivo".</td>
+                <td>Eu sei o porquê de ela ter faltado. <br><br> Eu sei o motivo de ela ter faltado.</td>
+            </tr>
+</table>
+
+            <h1>Conclusão</h1>
+
+            <p>
+
+            Dominar o uso dos "porquês" é essencial para quem quer escrever com clareza, precisão e credibilidade. Apesar de parecer complicado no início, com prática e atenção é possível identificar rapidamente qual forma usar.  
+            Agora que você já entendeu tudo, que tal revisar seus textos e mostrar que você sabe — e muito bem — o porquê de cada escolha?
+
+            </p>
 
         <section class="comentarios">
 
