--- a/index.html
+++ b/index.html
@@ -44,13 +44,16 @@
                 <div class="noticia-principal-1">
                     <div class="categoria">poema</div>
                     <div class="imagem">
-                        <a href="./poemas/carta-para-guto.html">
-                            <h2 class="titulo">Carta para: "Guto"</h2>
+                        <a href="./poemas/dia-ruim.html">
+                            <h2 class="titulo">Dia ruim</h2>
                         </a>
                         <div class="subititulo">
                             <ul>
-                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
-                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
+                                <li>
+                                    Um retrato cru de um dia ordinariamente violento.
+                                    O poema mergulha no instante exato em que a cidade revela sua indiferença — um pedestre quase atropelado se torna símbolo da fragilidade humana diante da pressa desumana.
+                                </li>
+
                             </ul>
                         </div>
                     </div>
@@ -89,13 +92,19 @@
                 <div class="noticia-principal-2">
                     <div class="categoria">poema</div>
                     <div class="imagem">
-                        <a href="./poemas/aniversario.html">
-                            <h2 class="titulo">Aniversário</h2>
+                        <a href="./poemas/2019.html">
+                            <h2 class="titulo">2019</h2>
                         </a>
                         <div class="subititulo">
                             <ul>
-                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
-                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
+                                <li>
+                                    Um lamento suave e solitário pelo passado.
+                                    O poema fala de um desejo simples, mas impossível: voltar a um dia perfeito — 2019-9-9-9, uma data que se repete como um eco emocional.
+                                </li>  
+
+                                <li>
+                                    Uma data que causa nostalgia no eu lírico
+                                </li>
                             </ul>
                         </div>
                     </div>
@@ -104,8 +113,37 @@
                     <div class="noticia-principal-1">
                     <div class="categoria">poema</div>
                     <div class="imagem">
-                        <a href="./poemas/carta-para-guto.html">
-                            <h2 class="titulo">Carta para: "Guto"</h2>
+                        <a href="./poemas/fruto-do-pecado.html">
+                            <h2 class="titulo">Fruto do pecado</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li></li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="noticia-principal-2">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./mistério/boca-santa.html">
+                            <h2 class="titulo">Boca santa</h2>
+                        </a>
+                        <div class="subititulo">
+                            <ul>
+                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
+                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
+                            </ul>
+                        </div>
+                    </div>
+                </div>
+
+                    <div class="noticia-principal-1">
+                    <div class="categoria">poema</div>
+                    <div class="imagem">
+                        <a href="./mistério/café-barcelo.html">
+                            <h2 class="titulo">Café Barcelo</h2>
                         </a>
                         <div class="subititulo">
                             <ul>
@@ -120,42 +158,11 @@
                     <div class="categoria">poema</div>
                     <div class="imagem">
                         <a href="./poemas/aniversario.html">
-                            <h2 class="titulo">Aniversário</h2>
+                            <h2 class="titulo">Animal</h2>
                         </a>
                         <div class="subititulo">
                             <ul>
-                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
-                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                    <div class="noticia-principal-1">
-                    <div class="categoria">poema</div>
-                    <div class="imagem">
-                        <a href="./poemas/carta-para-guto.html">
-                            <h2 class="titulo">Carta para: "Guto"</h2>
-                        </a>
-                        <div class="subititulo">
-                            <ul>
-                                <li>Um curto poema sobre um animalzinho que o autor teve durante sua infância, mas teve que deixá-lo por problemas financeiros.</li>
-                                <li>Considerado o poema de maior impacto do site, este artigo é o mais visitado pelos leitores e foi escolhido pelo autor como sua obra de maior valor emocional.</li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-
-                <div class="noticia-principal-2">
-                    <div class="categoria">poema</div>
-                    <div class="imagem">
-                        <a href="./poemas/aniversario.html">
-                            <h2 class="titulo">Aniversário</h2>
-                        </a>
-                        <div class="subititulo">
-                            <ul>
-                                <li>Poema sobre um aniversário chato, que muitas pessoas que o personagem considerava importante nem lembraram.</li>
-                                <li>Um aniversário esquecido, o silêncio foi a sua única companhia.</li>
+                                <li>História sobre uma indígena "domesticada" por colonizadores</li>
                             </ul>
                         </div>
                     </div>
@@ -181,7 +188,7 @@
 
                 <div class="noticia-container">
                     <div class="imagem">
-                        <a href="poemas/carta-para-guto.html">
+                        <a href="artigo-de-opinião/indio-ou-indigena.html">
                             <h2 class="titulo">Por que dizer "índio" se referindo a indígena é <br> errado? Saiba agora o porquê — e não cometa mais esse mesmo erro. </h2>
                         </a>
                     </div>
@@ -201,7 +208,7 @@
 
                 <div class="noticia-container">
                     <div class="imagem">
-                        <a href="poemas/carta-para-guto.html">
+                        <a href="artigo-de-opinião/diferenca-dos-porques.html">
                             <h2 class="titulo">Você sabe a diferença dos <i>"porquês"</i>? Uma dúvida <br> comum, mas que faz toda a diferença na hora de escrever bem. </h2>
                         </a>
                     </div>
